fixed middle chunk overlap on destkop

--- a/src/css/story/wordcloud.styl
+++ b/src/css/story/wordcloud.styl
@@ -9,9 +9,11 @@
 	+mq('bp-6')
 		margin -1.5rem auto 0 auto
 		position relative
-		width 100%
+		width 50%
 		max-width $column-width
 		padding-right 0
+	+mq('bp-6-5')
+		width 100%
 
 
 	.wordcloud-wrapper
